--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- sizes="222x395" -->
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" type="image/png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="description" content="My personal website + porfolio">
+    <meta name="keywords" content="David Kristek, web developer, react web developer">
+    <meta name="author" content="David Kristek">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <title>David Kristek</title>
+    <style>
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+      ::-webkit-scrollbar-thumb {
+        background: rgba(217, 221, 255, 0.6);
+        border-radius: 10px;
+        transition: all 0.2s;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: rgba(217, 221, 255, 0.8);
+       
+      }
+      ::-webkit-scrollbar-thumb:active {
+        background: rgba(237, 238, 255);
+       
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
