lagging image in project fixed

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <!-- sizes="222x395" -->
-    <link rel="icon" href="%PUBLIC_URL%/icon.png" type="image/png"/>
+    <link rel="icon" href="icon.png" type="image/png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="My personal website + porfolio">
     <meta name="keywords" content="David Kristek, web developer, react web developer">
     <meta name="author" content="David Kristek">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+    <link rel="apple-touch-icon" href="icon.png" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>David Kristek</title>
     <style>
